# m3player

./: .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO.tasks  autogen.sh  build.sh  configure.ac
debian/: changelog
src/: AVTransportV1.xml  AVTransportV2.xml  Makefile  Makefile.am  Makefile.in  MediaRendererV1.xml  MediaRendererV2.xml  RenderingControlV1.xml  RenderingControlV2.xml  audio-renderer.c  avtransport.c  avtransport.h  buttons  connectionmanager.c  connectionmanager.h  description1.xml  description2.xml  gstreamer.c  gstreamer.h  last_change.c  last_change.h  m3ddity-player.c  m3player.c  m3player.ini  preset.last  presets.c  presets.h  presets.list  renderingcontrol.c  renderingcontrol.h  run.sh
src/AVTransport/: description2.xml
src/ConnectionManager/: description1.xml
